--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
-li.game {
-  font-size: 16px;
-  list-style-type: none;
-  padding-bottom: 7px;
+body {
+  background-color: #fafafa;
 }
 
-.team {
-  display: inline-block;
-  width: 100px;
-}
-
-.icon {
-  height: 20px;
-  width: 20px;
-  display: inline;
+.title {
+  padding-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  color: #333;
 }
