--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body {
 }
 
 .btn {
-  color: #2196f3 !important;
   margin-right: 7px !important;
   margin-top: 3px !important;
   margin-bottom: 3px !important;
@@ -21,10 +20,14 @@ body {
   padding-top: 5px;
 }
 
-#help {
+#answer {
   padding-left: 23px;
-  padding-top: 5px;
-  color: #444;
+  padding-right: 23px;
+  padding-top: 15px;
+}
+
+#answer > .alert {
+  min-height: 50px;
 }
 
 #games > .game {
