--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,11 @@ img.logo {
   padding-left: 15px;
 }
 
+div.default-game {
+  background-color: #fafafa;
+}
+
 div.high-scoring {
   border: 1px solid #111;
-  background-color: #fafafa;
+  background-color: #fff;
 }
